just to be safe

--- a/website/website/src/pages/index.astro
+++ b/website/website/src/pages/index.astro
@@ -85,7 +85,8 @@ import Icon from "astro-icon";
                     <div class="space-y-2">
                         <h3 class="font-bold">Auto Translation</h3>
                         <p class="text-sm text-muted-foreground">
-                            Automatical sentence to sentece translation with multiple translation models available at your disposal.
+                            Automatical sentence to sentece translation with multiple translation models available at
+                            your disposal.
                         </p>
                     </div>
                 </div>
@@ -122,13 +123,13 @@ import Icon from "astro-icon";
             </div>
 
             <section></section>
-        <div class="mx-auto text-center md:max-w-[58rem]">
-            <p
-                    class="leading-normal text-muted-foreground sm:text-lg sm:leading-7 balance-text"
-            >
-                <b>NOT SURE THO </b>Zal also hosts a blog about cuneiform and general near east history!
-            </p>
-        </div>
+            <div class="mx-auto text-center md:max-w-[58rem]">
+                <p
+                        class="leading-normal text-muted-foreground sm:text-lg sm:leading-7 balance-text"
+                >
+                    <b>NOT SURE THO </b>Zal also hosts a blog about cuneiform and general near east history!
+                </p>
+            </div>
     </section>
     <section id="open-source" class="container py-8 md:py-12 lg:py-28">
         <div
